--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </style>
 </head>
 
-<body id="bodyStyle">
-  <div id="app"></div>
-  hello world!!
+<body id="">
+  <!-- <div id="app"></div> -->
+  Hello World!!
 </body>
 
 
