--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <title>KUUBIO</title>
-  <style>
-    html, #app, #app>div, body {
-      /*height: 100%;*/
-      font-family: 'Poppins', sans-serif;
-    }
-  </style>
-</head>
-
-<body id="">
-  <!-- <div id="app"></div> -->
-  Hello World!!
-</body>
-
-
-
+  <head>
+    <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="React_logo.ico">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli">
+    <title>My Resume</title>
+  </head>
+  <body>
+      <div id="app"></div>
+  <script type="text/javascript" src="main.js"></script></body>
 </html>
